deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-gitops
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: hello-gitops
